<resources>
    <string name="app_name">TripGo</string>
    <string name="Email">Please confirm your email and press the Refresh Button.</string>
    <string name="nav_home">Tourism</string>
    <string name="nav_notif">Event</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="harga_paket_standar">Harga Paket Standar</string>
    <string name="nomor_handphone">Nomor Telepon</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="link_id_youtube_video">Link Id Youtube Video</string>
    <string name="koordinat_tempat">Koordinat Tempat</string>

    <string-array name="category">

        <item>Pilih Kategori</item>
        <item>Bahari</item>
        <item>Budaya</item>
        <item>Alam</item>
        <item>Buatan</item>

    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"


    </string>
    <string name="action_settings">Settings</string>
    <string name="explore">Go Explore!</string>
    <string name="event_berakhir">Event Berakhir</string>
    <string name="event_mulai">Event Mulai</string>
    <string name="checkbox_event">Centang untuk mengaitkan ke tempat Wisata</string>


    <string name="youtubeapi">AIzaSyDmW3ENWq3-3BjiFwAbq0qt7hRADXQ6_8o</string>
    <string name="search">Search</string>
    <string name="textPrice">Tiket Masuk Rp</string>

</resources>
