<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kadek.tripgo.EditPlacesActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/edit_places_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_places_app_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/edit_button_addlatong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="23dp"
                android:text="@string/koordinat_tempat"
                android:layout_below="@id/edit_imagebutton4"
                android:layout_alignStart="@id/edit_imagebutton4"
                android:layout_alignEnd="@id/edit_imagebutton4"/>

            <TextView
                android:id="@+id/edit_textview_placesname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignStart="@id/edit_imagebutton4"
                android:text="TextView"
                android:visibility="gone"
                android:layout_below="@id/edit_imagebutton4"
                android:layout_toLeftOf="@id/edit_button_addlatong"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_input_phone"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/edit_input_nameplace">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_handphone"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_input_price"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/edit_input_phone">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_paket_standar"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_input_nameplace"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_wisata" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_input_youtube"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/edit_input_price">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/link_id_youtube_video" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_input_description"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/edit_input_youtube">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Deskripsi Lengkap" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/edit_imagebutton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:layout_below="@id/edit_spinner_category"
                app:srcCompat="@drawable/baseline_add_24" />

            <ImageButton
                android:id="@+id/edit_imagebutton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:layout_below="@id/edit_imagebutton1"
                app:srcCompat="@drawable/baseline_add_24" />

            <ImageButton
                android:id="@+id/edit_imagebutton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:layout_below="@id/edit_imagebutton2"
                app:srcCompat="@drawable/baseline_add_24" />

            <ImageButton
                android:id="@+id/edit_imagebutton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:layout_below="@id/edit_imagebutton3"
                app:srcCompat="@drawable/baseline_add_24" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/edit_button_addlatong"
                android:layout_alignEnd="@id/edit_imagebutton4"
                android:layout_alignStart="@id/edit_imagebutton4">



                <Button
                    android:id="@+id/edit_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="18dp"
                    android:layout_marginRight="2dp"
                    android:text="Cancel"

                    />
                <Button
                    android:id="@+id/edit_button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Save"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="2"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/edit_spinner_category"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/edit_input_description"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
